--- a/client/src/app/components/navbar/navbar.component.html
+++ b/client/src/app/components/navbar/navbar.component.html
@@ -1,3 +1,3 @@
 <div class="card">
-    <p-tabMenu [model]="items" [activeItem]="activeItem"></p-tabMenu>
+    <p-tabMenu class="flex justify-content-center" [model]="items" [activeItem]="activeItem"></p-tabMenu>
 </div>
