--- a/client/src/app/components/navbar/navbar.component.html
+++ b/client/src/app/components/navbar/navbar.component.html
@@ -1,3 +1,5 @@
-<div class="card">
-    <p-tabMenu class="flex justify-content-center" [model]="items" [activeItem]="activeItem"></p-tabMenu>
-</div>
+<p-tabMenu
+  class="flex justify-content-center bg-blue-100"
+  [model]="items"
+  [activeItem]="activeItem"
+></p-tabMenu>
