--- a/client/src/app/pages/medication-add/medication-add.component.html
+++ b/client/src/app/pages/medication-add/medication-add.component.html
@@ -1,69 +1,90 @@
 <form [formGroup]="formMedication" (ngSubmit)="submitForm()">
   <div class="p-8 card">
     <div class="grid">
-      <div class="col-6 sm:col-12 lg:col-6">
+      <div class="col-12 sm:col-12 lg:col-6">
         <b>Nombre:</b>
         <input
-          type="nombre"
-          name="nombre"
-          class="w-full my-2"
+          type="name"
+          name="name"
           pInputText
-          formControlName="nombre"
+          formControlName="name"
           [disabled]="isDisabled"
+          [ngClass]="{
+            '': true,
+            'w-full my-2': true,
+          }"
         />
+        <small *ngIf="validar('name')">{{ getMensaje("name") }}</small>
       </div>
-      <div class="col-6 sm:col-12 lg:col-6">
+      <div class="col-12 sm:col-12 lg:col-6">
         <b>Laboratorio:</b>
         <input
           type="text"
-          name="laboratorio"
+          name="laboratory"
           class="w-full my-2"
           pInputText
-          formControlName="laboratorio"
+          formControlName="laboratory"
           [disabled]="isDisabled"
         />
       </div>
 
-      <div class="col-6 sm:col-12 lg:col-6">
+      <div class="col-12 sm:col-12 lg:col-6">
         <b>Fecha Fabricacion:</b>
         <p-calendar
-          name="fechaFabricacion"
-          formControlName="fechaFabricacion"
+          name="dateProduction"
+          formControlName="dateProduction"
           [showIcon]="true"
           styleClass="w-full my-2"
           dateFormat="dd-mm-yy"
           [appendTo]="'body'"
+          [ngClass]="{
+            'w-full my-2': true,
+            'ng-invalid ng-dirty':
+              f['dateProduction'].invalid &&
+              (f['dateProduction'].errors || f['dateProduction'].touched)
+          }"
         ></p-calendar>
       </div>
-      <div class="col-6 sm:col-12 lg:col-6">
+      <div class="col-12 sm:col-12 lg:col-6">
         <b>Fecha Vencimiento:</b>
         <p-calendar
-          name="fechaVencimiento"
-          formControlName="fechaVencimiento"
+          name="dateExpiration"
+          formControlName="dateExpiration"
           [showIcon]="true"
           styleClass="w-full my-2"
           dateFormat="dd-mm-yy"
           [appendTo]="'body'"
+          [ngClass]="{
+            'w-full my-2': true,
+            'ng-invalid ng-dirty':
+              f['dateExpiration'].invalid &&
+              (f['dateExpiration'].errors || f['dateExpiration'].touched)
+          }"
         ></p-calendar>
       </div>
-      <div class="col-6 sm:col-12 lg:col-6">
+      <div class="col-12 sm:col-12 lg:col-6">
         <b>Stock:</b>
         <p-inputNumber
-          name="cantidadStock"
-          formControlName="cantidadStock"
+          name="stock"
+          formControlName="stock"
           inputId="integeronly"
           class="w-full my-2"
           [showButtons]="true"
           inputId="minmax-buttons"
           [min]="1"
+          [ngClass]="{
+            'w-full my-2': true,
+            'ng-invalid ng-dirty':
+              f['stock'].invalid && (f['stock'].errors || f['stock'].touched)
+          }"
         >
         </p-inputNumber>
       </div>
-      <div class="col-6 sm:col-12 lg:col-6">
+      <div class="col-12 sm:col-12 lg:col-6">
         <b>Valor Unitario:</b>
         <p-inputNumber
-          name="valorUnitario"
-          formControlName="valorUnitario"
+          name="unitvalue"
+          formControlName="unitvalue"
           inputId="integeronly"
           class="w-full my-2"
           mode="decimal"
