--- a/client/src/app/pages/medication/medication.component.html
+++ b/client/src/app/pages/medication/medication.component.html
@@ -1,143 +1,136 @@
-<p-toast></p-toast>
-<p-table
-  #dt
-  [value]="medicacion"
-  dataKey="id"
-  [tableStyle]="{ 'min-width': '50rem', }"
-  [rowHover]="true"
-  [rows]="2"
-  [showCurrentPageReport]="true"
-  [rowsPerPageOptions]="[2, 10, 25]"
-  [globalFilterFields]="[
-    'nombre',
-    'laboratorio',
-    'fechaFabricacion',
-    'fechaVencimiento',
-    'fechaFabricacion'
-  ]"
-  [paginator]="true"
-  currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries"
->
-  <ng-template pTemplate="caption">
-    <div class="flex w-full justify-content-end gap-3">
-      <button
-        pButton
-        label="Agregar"
-        class="p-button-outlined"
-        icon="pi pi-save"
-        (click)="showCreateMedication()"
-      ></button>
+<div class="card px-8 py-4">
+  <p-toast></p-toast>
+  <p-table
+    #dt
+    [value]="medicacion"
+    dataKey="id"
+    [tableStyle]="{ 'min-width': '50rem', }"
+    [rowHover]="true"
+    [rows]="25"
+    [showCurrentPageReport]="true"
+    [rowsPerPageOptions]="[2, 10, 25]"
+    [globalFilterFields]="[
+      'name',
+      'laboratory',
+      'dateProduction',
+      'dateExpiration',
+      'stock',
+      'unitvalue'
+    ]"
+    [paginator]="true"
+    currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries"
+  >
+    <ng-template pTemplate="caption">
+      <div class="flex w-full justify-content-end gap-3">
+        <button
+          pButton
+          label="Agregar"
+          class="p-button-outlined"
+          icon="pi pi-save"
+          (click)="showModalMedication(false)"
+        ></button>
 
-      <span class="p-input-icon-left ml-auto"></span>
-      <button
-        pButton
-        label="Clear"
-        class="p-button-outlined"
-        icon="pi pi-filter-slash"
-        (click)="clear(dt)"
-      ></button>
-      <button
-        pButton
-        label="Actualizar"
-        class="p-button-outlined"
-        icon="pi pi-sync"
-        (click)="getMedicamentos()"
-      ></button>
-      <span class="p-input-icon-left">
-        <i class="pi pi-search"></i>
-        <input
-          pInputText
-          type="text"
-          (input)="dt.filterGlobal($any($event.target).value, 'contains')"
-          placeholder="Global Search"
-        />
-      </span>
-    </div>
-  </ng-template>
+        <span class="p-input-icon-left ml-auto"></span>
+        <button
+          pButton
+          label="Clear"
+          class="p-button-outlined"
+          icon="pi pi-filter-slash"
+          (click)="clear(dt)"
+        ></button>
+        <span class="p-input-icon-left">
+          <i class="pi pi-search"></i>
+          <input
+            pInputText
+            type="text"
+            (input)="dt.filterGlobal($any($event.target).value, 'contains')"
+            placeholder="Global Search"
+          />
+        </span>
+      </div>
+    </ng-template>
 
-  <ng-template pTemplate="header" class="mt-3 mb-3">
-    <tr>
-      <th style="min-width: 10rem">estado</th>
-      <!-- <p-columnFilter type="boolean" field="verified"></p-columnFilter> -->
-      <th>
-        nombre<p-columnFilter
-          type="text"
-          field="nombre"
-          display="menu"
-        ></p-columnFilter>
-      </th>
-      <th>
-        laboratorio<p-columnFilter
-          type="text"
-          field="laboratorio"
-          display="menu"
-        ></p-columnFilter>
-      </th>
-      <th>
-        fechaFabricacion<p-columnFilter
-          type="text"
-          field="fechaFabricacion"
-          display="menu"
-        ></p-columnFilter>
-      </th>
-      <th>
-        fechaVencimiento
-        <p-columnFilter
-          type="text"
-          field="fechaVencimiento"
-          display="menu"
-        ></p-columnFilter>
-      </th>
-      <th>cantidadStock</th>
-      <th>valorUnitario</th>
-      <th>Acciones</th>
-    </tr>
-  </ng-template>
-  <ng-template pTemplate="body" let-medicamento>
-    <tr>
-      <td>
-        <i
-          *ngIf="medicamento.estado == 0"
-          class="pi pi-info-circle"
-          style="color: red"
-        ></i>
-        <i
-          *ngIf="medicamento.estado == 1"
-          class="pi pi-check-circle"
-          style="color: green"
-        ></i>
-      </td>
-      <!-- <td>{{ medicamento.estado==0?<i class="pi pi-info-circle" style="color: green"></i>: <i class="pi pi-check-circle" style="color: green"></i> }}</td> -->
-      <td>{{ medicamento.nombre }}</td>
-      <td>{{ medicamento.laboratorio }}</td>
-      <td>{{ medicamento.fechaFabricacion | date : "yyyy-MM-dd" }}</td>
-      <td>{{ medicamento.fechaVencimiento | date : "yyyy-MM-dd" }}</td>
-
-      <td>
-        <div
-          [ngClass]="{
-            outofstock: medicamento.cantidadStock === 0,
-            lowstock:
-              medicamento.cantidadStock > 0 && medicamento.cantidadStock < 10,
-            instock: medicamento.cantidadStock > 10
+    <ng-template pTemplate="header" class="mt-3 mb-3">
+      <tr>
+        <th class="text-center">estado</th>
+        <th class="text-center">
+          nombre<p-columnFilter
+            type="text"
+            field="name"
+            display="menu"
+          ></p-columnFilter>
+        </th>
+        <th class="text-center">
+          laboratorio<p-columnFilter
+            type="text"
+            field="laboratory"
+            display="menu"
+          ></p-columnFilter>
+        </th>
+        <th class="text-center">
+          fechaFabricacion<p-columnFilter
+            type="text"
+            field="dateProduction"
+            display="menu"
+          ></p-columnFilter>
+        </th>
+        <th class="text-center">
+          fechaVencimiento
+          <p-columnFilter
+            type="text"
+            field="dateExpiration"
+            display="menu"
+          ></p-columnFilter>
+        </th>
+        <th class="text-center">stock</th>
+        <th class="text-center">valorUnitario</th>
+        <th class="text-center">Acciones</th>
+      </tr>
+    </ng-template>
+    <ng-template pTemplate="body" let-medicamento>
+      <tr>
+        <td class="text-center">
+          <i
+            [ngClass]="{
+            'pi pi-circle-on':true,
+            'text-red-700': medicamento.state == 0,
+            'text-green-700': medicamento.state == 1,
           }"
-        >
-          {{ medicamento.cantidadStock }}
-        </div>
-      </td>
-      <td>{{ medicamento.valorUnitario }}</td>
-      <td>
-        <p-splitButton
-          [appendTo]="'body'"
-          label="Vender"
-          (onClick)="sell(medicamento)"
-          (onDropdownClick)="
-            handleClick(medicamento.nombre, medicamento.laboratorio)
-          "
-          [model]="items"
-        />
-      </td>
-      <br />
-    </tr>
-  </ng-template>
-</p-table>
+          ></i>
+        </td>
+        <td class="text-center">{{ medicamento.name }}</td>
+        <td class="text-center">{{ medicamento.laboratory }}</td>
+        <td class="text-center">
+          {{ medicamento.dateProduction | date : "yyyy-MM-dd" }}
+        </td>
+        <td class="text-center">
+          {{ medicamento.dateExpiration | date : "yyyy-MM-dd" }}
+        </td>
+
+        <td class="text-center">
+          <div
+            [ngClass]="{
+              outofstock: medicamento.stock === 0,
+              lowstock: medicamento.stock > 0 && medicamento.stock < 10,
+              instock: medicamento.stock > 10
+            }"
+          >
+            {{ medicamento.stock }}
+          </div>
+        </td>
+        <td class="text-center">{{ medicamento.unitvalue }}</td>
+        <td>
+          <p-splitButton
+            [appendTo]="'body'"
+            icon="pi pi-shopping-cart"
+            label="Vender"
+            (onClick)="sell(medicamento)"
+            (onDropdownClick)="handleClick(medicamento.id)"
+            [model]="items"
+          />
+        </td>
+        <br />
+      </tr>
+    </ng-template>
+  </p-table>
+</div>
